<?xml version="1.0"?>
<package format="2">
  <name>benchmark</name>
  <version>0.0.0</version>
  <description>The google benchmark package</description>

  <maintainer email="todo@todo.todo">benchmark group</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
